--- a/signup.html
+++ b/signup.html
@@ -10,7 +10,7 @@
         Enter Username: <input type="text" placeholder="Username"><br>
         Enter email:<input type="text" placeholder="email"><br>
         Enter Password: <input type="password" placeholder="Password"><br>
-        <button type="submit"><a href="login.html">Log In</a></button>
+        <button type="submit"><a href="index.html">Log In</a></button>
         <button type="submit"><a href="signup.html">Sign Up</a></button>
 
     </form>
